# MChess

./: CMakeLists.txt  README.md  build.bat
src/: BitBoard.cpp  MoveGen.cpp  main.cpp
src/headers/: BitBoard.hpp  Debug.hpp  Move.hpp  MoveGen.hpp
